<resources>
    <string name="app_name">Student Management SQLite</string>
    <string name="loading_screen_textView1">Đang tải...</string>
    <string name="loading_screen_textView2">Phát triển bởi Hai Nguyen</string>
    <string name="input_screen_textView1">Nhập thông tin</string>
    <string name="input_screen_editText1">Họ tên</string>
    <string name="input_screen_editText3">Ngày sinh</string>
    <string name="input_screen_editText2">Mã sinh viên</string>
    <string name="input_screen_editText4">Lớp</string>
    <string name="input_screen_editText5">Quê quán</string>
    <string name="input_screen_button1">Thêm</string>
    <string name="input_screen_button2">Hiển thị</string>
    <string name="input_screen_textView2"><u>Thoát?</u></string>
    <string name="list_student_information_textView">Danh sách sinh viên</string>
    <string name="empty_list_student_textView">Danh sách học viên rỗng</string>
    <string name="context_menu_item_detail">Chi tiết</string>
    <string name="context_menu_item_edit">Sửa</string>
    <string name="context_menu_item_delete">Xóa</string>
    <string name="one_student_info_textView1">Thông tin chi tiết sinh viên</string>
    <string name="edit_student_information_textView1">Chỉnh sửa thông tin sinh viên</string>
    <string name="edit_student_information_editText1">Họ tên</string>
    <string name="edit_student_information_editText2">Mã sinh viên</string>
    <string name="edit_student_information_editText3">Ngày sinh</string>
    <string name="edit_student_information_editText4">Lớp</string>
    <string name="edit_student_information_editText5">Quê quán</string>
    <string name="edit_student_information_button1">Cập nhật</string>
    <string name="edit_student_information_button2">Hủy</string>
</resources>
